force-app/main/default/objects/B25__AutomatedBookingRule__c/B25__AutomatedBookingRule__c.object-meta.xml
<CustomObject>
    <description>Encapsulates a set of rules to automatically create Reservations from Opportunities and their Line Items.</description>
    <label>Automated Booking Rule</label>
    <nameField>
        <displayFormat>ABR-{000000}</displayFormat>
        <label>Automated Booking Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Booking Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>