force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__ActivatingCheckbox__c.field-meta.xml
<CustomField>
    <fullName>B25__ActivatingCheckbox__c</fullName>
    <description>The checkbox field on opportunity that will trigger this rule when it changes from false to true.</description>
    <inlineHelpText>Le champ de la case à cocher pour l’opportunité qui déclenchera cette règle lorsqu’il passe de false à true.</inlineHelpText>
    <label>Activating Checkbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>