force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Aggregate_Olis__c.field-meta.xml
<CustomField>
    <fullName>B25__Aggregate_Olis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, all contiguous opportunity line items for this product will be handled together so they will occupy the same resources.</description>
    <inlineHelpText>Si cette option est cochée, tous les postes d’opportunité contigus pour ce produit seront traités ensemble afin qu’ils occupent les mêmes ressources.</inlineHelpText>
    <label>Aggregate Opportunity Line Items</label>
    <type>Checkbox</type>
</CustomField>