force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__AlsoDeleteRecurring__c.field-meta.xml
<CustomField>
    <fullName>B25__AlsoDeleteRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, also delete any recurring reservations that the reservations are related to.</description>
    <inlineHelpText>Lorsque cette option est cochée, elle supprime également toutes les réservations récurrentes auxquelles les réservations sont liées.</inlineHelpText>
    <label>Also Delete Recurring</label>
    <type>Checkbox</type>
</CustomField>