force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__AutomatedBookingRule__c.field-meta.xml
<CustomField>
    <fullName>B25__AutomatedBookingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the parent ABR.</description>
    <inlineHelpText>Une recherche d’ABR parent.</inlineHelpText>
    <label>Automated Booking Rule</label>
    <referenceTo>B25__AutomatedBookingRule__c</referenceTo>
    <relationshipLabel>Related Rules</relationshipLabel>
    <relationshipName>AutomatedBookingRules</relationshipName>
    <type>Lookup</type>
</CustomField>