force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Description__c.field-meta.xml
<CustomField>
    <fullName>B25__Description__c</fullName>
    <description>Description of what this rule does.</description>
    <inlineHelpText>Description de ce que fait cette règle.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>