force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__EndDateField__c.field-meta.xml
<CustomField>
    <fullName>B25__EndDateField__c</fullName>
    <description>A date field on opportunity or opportunity product.</description>
    <inlineHelpText>Un champ de date pour une opportunité ou un produit d’opportunité.</inlineHelpText>
    <label>End Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>