force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__EndTime__c.field-meta.xml
<CustomField>
    <fullName>B25__EndTime__c</fullName>
    <description>Required when using EndDateField__c instead of EndDatetimeField__c</description>
    <inlineHelpText>Heure de la journée (c’est-à-dire 17 pour 17 heures)</inlineHelpText>
    <label>End Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>