force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__EndTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>B25__EndTimeMinutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of minutes to add to the end time.</description>
    <inlineHelpText>Nombre de minutes à ajouter à l’heure de fin.</inlineHelpText>
    <label>End Time Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>