force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__IsActive__c.field-meta.xml
<CustomField>
    <fullName>B25__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Automated Booking Rule is activated.</description>
    <inlineHelpText>Lorsque cette option est cochée, l’Automated Booking Rule est activée.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>