force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__NrOfTimeUnitsField__c.field-meta.xml
<CustomField>
    <fullName>B25__NrOfTimeUnitsField__c</fullName>
    <description>A number field on opportunity or opportunity product. Used together with Time Unit to calculate a duration for the reservations.</description>
    <inlineHelpText>Un champ numérique pour l’opportunité ou le produit d’opportunité. Utilisé avec l’unité de temps pour calculer une durée pour les réservations.</inlineHelpText>
    <label>Nr Of Time Units Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>