force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__NumberofReservationsField__c.field-meta.xml
<CustomField>
    <fullName>B25__NumberofReservationsField__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <description>How many reservations should be created when this rule triggers? Either reference a field on opportunity or opportunity product, or fill in a literal quantity.</description>
    <inlineHelpText>Combien de réservations doivent être créées lorsque cette règle se déclenche ? Faites soit référence à un champ pour l’opportunité ou le produit d’opportunité, soit saisissez une quantité littérale.</inlineHelpText>
    <label>Number of Reservations to Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>