force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Product__c.field-meta.xml
<CustomField>
    <fullName>B25__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When empty, trigger once for the opportunity. When filled in, trigger for every opportunity product of the chosen product.</description>
    <inlineHelpText>Lorsque ce champ est vide, il se déclenche une fois pour l’opportunité. Lorsqu’il est rempli, il se déclenche pour chaque produit d’opportunité du produit choisi.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Automated Booking Rules</relationshipLabel>
    <relationshipName>Automated_Booking_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>