force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Repeat__c.field-meta.xml
<CustomField>
    <fullName>B25__Repeat__c</fullName>
    <description>Determines the frequency of which the ABR repeats itself.</description>
    <inlineHelpText>Détermine la fréquence à laquelle l’ABR se répète.</inlineHelpText>
    <label>Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>