force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__ReservationQuantity__c.field-meta.xml
<CustomField>
    <fullName>B25__ReservationQuantity__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <description>Either reference a field on opportunity or opportunity product, or fill in a literal quantity.</description>
    <inlineHelpText>Faites soit référence à un champ pour l’opportunité ou le produit d’opportunité, soit saisissez une quantité littérale.</inlineHelpText>
    <label>Reservation Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>