force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__ReservationStatus__c.field-meta.xml
<CustomField>
    <fullName>B25__ReservationStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The status that the reservation(s) will get.</description>
    <inlineHelpText>Le statut que la ou les réservations obtiendront.</inlineHelpText>
    <label>Reservation Status</label>
    <referenceTo>B25__Reservation_Status__c</referenceTo>
    <relationshipLabel>Automated Booking Rules</relationshipLabel>
    <relationshipName>Automated_Booking_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>