force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Skip_Subtotal_Calculation__c.field-meta.xml
<CustomField>
    <fullName>B25__Skip_Subtotal_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this will bypass Booker25&apos;s price calculation for these reservations.</description>
    <inlineHelpText>Si vous cochez cette case, le calcul du prix par Booker25 pour ces réservations sera ignoré.</inlineHelpText>
    <label>Skip Subtotal Calculation</label>
    <type>Checkbox</type>
</CustomField>