force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__StartDateField__c.field-meta.xml
<CustomField>
    <fullName>B25__StartDateField__c</fullName>
    <description>A date field on opportunity or opportunity product. Required if Start Datetime Field is blank.</description>
    <inlineHelpText>Un champ de date pour l’opportunité ou le produit d’opportunité. Requis si le champ de date et d’heure de début est vide.</inlineHelpText>
    <label>Start Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>