force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__StartDateOffset__c.field-meta.xml
<CustomField>
    <fullName>B25__StartDateOffset__c</fullName>
    <description>Enter the time in days that the start date should be offset by. Can be negative.</description>
    <inlineHelpText>Saisissez le temps en jours dont la date de début doit être décalée. Il peut être négatif.</inlineHelpText>
    <label>Start Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>