force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__StartDatetimeField__c.field-meta.xml
<CustomField>
    <fullName>B25__StartDatetimeField__c</fullName>
    <description>A datetime field on opportunity or opportunity product.</description>
    <inlineHelpText>Un champ de date et d’heure pour une opportunité ou un produit d’opportunité.</inlineHelpText>
    <label>Start Datetime Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>