force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__StartTime__c.field-meta.xml
<CustomField>
    <fullName>B25__StartTime__c</fullName>
    <description>Hour of day (i.e. 17 for 5pm). Required if Start Datetime Field is blank.</description>
    <inlineHelpText>Heure de la journée (c’est-à-dire 17 pour 17 heures). Requis si le champ de date et d’heure de début est vide.</inlineHelpText>
    <label>Start Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>