force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__StartTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>B25__StartTimeMinutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of minutes to add to the start time.</description>
    <inlineHelpText>Nombre de minutes à ajouter à l’heure de début.</inlineHelpText>
    <label>Start Time Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>