force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__TimeUnit__c.field-meta.xml
<CustomField>
    <fullName>B25__TimeUnit__c</fullName>
    <description>If this value is Days or higher, you can use End Time to set the time of day that the reservation should end. Otherwise, the reservation will end at the same time of day that it started.</description>
    <inlineHelpText>Si cette valeur est égale ou supérieure à celle des jours, vous pouvez utiliser l’heure de fin pour définir l’heure de la journée à laquelle la réservation doit se terminer. Sinon, la réservation se terminera à l’heure de la journée à laquelle elle a commencé.</inlineHelpText>
    <label>Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>