force-app/main/default/objects/B25__AutomatedBookingRule__c/fields/B25__Title__c.field-meta.xml
<CustomField>
    <fullName>B25__Title__c</fullName>
    <description>The title to give to the reservation(s).</description>
    <inlineHelpText>Le titre à donner à la (aux) réservation(s).</inlineHelpText>
    <label>Title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>