force-app/main/default/objects/B25__AutomatedBookingRule__c/recordTypes/B25__Create.recordType-meta.xml
<RecordType>
    <fullName>B25__Create</fullName>
    <active>true</active>
    <description>A rule to create reservations from an opportunity</description>
    <label>Create</label>
</RecordType>