force-app/main/default/objects/B25__AutomatedBookingRule__c/recordTypes/B25__Delete.recordType-meta.xml
<RecordType>
    <fullName>B25__Delete</fullName>
    <active>true</active>
    <description>A rule to delete reservations created by another rule.</description>
    <label>Delete</label>
</RecordType>