force-app/main/default/objects/B25__AutomatedBookingRule__c/recordTypes/B25__Update.recordType-meta.xml
<RecordType>
    <fullName>B25__Update</fullName>
    <active>true</active>
    <description>A rule to update reservations created by another rule</description>
    <label>Update</label>
</RecordType>