force-app/main/default/objects/B25__AutomatedBookingRule__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__IsActive__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>B25__ActivatingCheckbox__c</columns>
    <columns>B25__Product__c</columns>
    <columns>B25__ReservationStatus__c</columns>
    <columns>B25__AutomatedBookingRule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>